syntax = "proto3";

package chatServer_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "/home/dak/GolandProjects/chat-server-service/pkg/chatServer_v1;chatServer_v1";

service ChatServerV1 {
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc SendMessage (SendMessageRequest) returns (google.protobuf.Empty) {}
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty) {}
}

message CreateRequest {
  repeated int64 user_ids = 1;
  string title = 2;
}

message CreateResponse {
  int64 id = 1;
}

message SendMessageRequest {
  int64 chat_id = 1;
  int64 user_id = 2;
  string text = 3;
  google.protobuf.Timestamp sent_at = 4;
}

message DeleteRequest {
  int64 id = 1;
}